# EddieBot

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  TODO  _gitignore  build.gradle  pom.xml  procfile  readme.md  settings.gradle
.github/workflows/: rust.yml
EddieBot/: Procfile  pom.xml
EddieBot/src/: Connection.java  Constants.java  MessageResponder.java  NoSwearing.java
EddieBot/src/main/java/: Constants.java  main.java
gradle/wrapper/: gradle-wrapper.properties
src/: main.rs
src/commands/: command.rs  fun.rs  mod.rs  quit_cmd.rs  temp.txt  test_cmd.rs
src/commands/moderation/: ban.rs  kick.rs  mod.rs  mute.rs
src/eddie/: EddieBot.java  main.java
src/eddie/commands/administrator/: Jail.java  Purge.java  SwearFilter.java
src/eddie/commands/essential/: BotInfo.java  Help.java  Ping.java
src/eddie/commands/fun/: ChuckNorris.java  FakeName.java  Gif.java  Insult.java  Joke.java  Meow.java  TWSS.java  TheOffice.java  Woof.java
src/eddie/commands/misc/: Feedback.java  Help.java  Misc.java
src/eddie/commands/music/: AudioPlayerSendHandler.java  GuildMusicManager.java  LeaveVoiceChannel.java  PlayerControl.java  TrackScheduler.java
src/eddie/commands/owner/: Eval.java  Kill.java
src/eddie/helpful/: Categories.java  EmbedMsg.java  JSONInfo.java  Permissions.java
src/main/java/: .env  Constants.java  main.java
src/main/java/Administrator/: Jail.java  NoSwearing.java  Purge.java
src/main/java/Commands/: Help.java  Insult.java  Joke.java  Misc.java  PlayerControl.java  TWSS.java  TrackScheduler.java
src/main/java/Helpful/: EmbedMsg.java
(+72 files in other folders)
