[package]
name = "eddie_bot"
version = "0.1.0"
authors = ["Nate Sedler <nsedler1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
chrono = "0.4"
dotenv = "0.15"
regex = "1"
lazy_static = "1.4.0"